--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,6 @@
     "@storybook/react": "^8.0.5",
     "@storybook/react-vite": "^8.0.5",
     "@storybook/test": "^8.0.5",
-    "jest-environment-jsdom": "^29.7.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
@@ -69,6 +68,8 @@
     "eslint-plugin-storybook": "^0.8.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "msw": "^2.2.10",
     "postcss": "^8.4.38",
     "storybook": "^8.0.5",
