--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -8,7 +8,7 @@ COPY . .
 RUN turbo prune frontend --docker
 
 
-FROM base as runner
+FROM base as installer
 WORKDIR /app
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/package-lock.json ./package-lock.json
@@ -16,5 +16,17 @@ RUN npm install
  
 COPY --from=builder /app/out/full/ .
 RUN npx turbo run build --filter=frontend...
+
+
+FROM base as runner
+WORKDIR /app
+
+RUN addgroup app && adduser -S -G app app
+USER app
+
+COPY --from=installer --chown=app:app /app/node_modules ./node_modules
+COPY --from=installer --chown=app:app /app/frontend/dist ./frontend/dist
+COPY --from=installer --chown=app:app /app/frontend/vite* ./frontend/
+COPY --from=installer --chown=app:app /app/frontend/package.json ./frontend/
 
 CMD ["npm", "run", "start:prod", "--prefix", "frontend"]
